Correcting form alignement

--- a/src/styles/sass/partials/_mediaQuery.scss
+++ b/src/styles/sass/partials/_mediaQuery.scss
@@ -30,6 +30,7 @@
   }
   form {
     flex-direction: column;
+    align-items: center;
   }
 
   .textForm {
